--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
   },
   "homepage": "https://github.com/ujjwalkumar-64/DevTinder-Backend#readme",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.726.1",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^11.0.5",
     "validator": "^13.12.0"
   }
 }
