--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.9.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "razorpay": "^2.9.5",
     "uuid": "^11.0.5",
     "validator": "^13.12.0"
   }
