--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "razorpay": "^2.9.5",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.5",
     "validator": "^13.12.0"
   }
