collaboration coding setup using socket and jughe0 api

--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "homepage": "https://github.com/ujjwalkumar-64/DevTinder-Backend#readme",
   "dependencies": {
     "@aws-sdk/client-ses": "^3.726.1",
+    "@octokit/rest": "^21.1.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dockerode": "^4.0.6",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
